# Klaus

./: CMakeLists.txt  array_program
Code_exam/src/: developer_group.c  main.c
code_1_draft/include/: developer_group.h
code_1_draft/src/: main.c
include/: developer.h  developer.hpp  developer_group.h  junior_developer.hpp  senior_developer.hpp
learn2code_exam_Kai.Retig_Klaus.Bast/code_1_draft/include/: developer.h
learn2code_exam_Kai.Retig_Klaus.Bast/code_1_draft/src/: developer.c
logos/: logo_junior.txt  logo_senior.txt
src/: developer.c  developer.cpp  developer_group.c  junior_developer.cpp  main.c  main.cpp  senior_developer.cpp
test/: test_functions.cpp
